--- a/7/dop.css
+++ b/7/dop.css
@@ -1,49 +1,54 @@
-body{
+body {
     padding: 0;
     margin: 0;
 }
 
-h1{
+h1 {
     width: 100%;
     text-align: center;
 }
 
-.dir, .jus, .al{
+.dir, .jus, .al {
     margin: 0 10px;
 }
 
-.container1, .container2, .container3{
+.container1, .container2, .container3 {
     margin: 10px;
     height: 200px;
     border: solid 1px rgb(85, 85, 85);
     display: flex;
 }
 
-.el1, .el2, .el3, .el4{
+.el1, .el2, .el3, .el4 {
     width: 100px;
     height: 50px;
     text-align: center;
 }
 
-.el1{
+.el1 {
     background-color: rgb(232, 101, 101);
 }
 
-.el2{
+.el2 {
     background-color: rgb(252, 252, 116);
 }
 
-.el3{
+.el3 {
     background-color: rgb(97, 218, 97);
 }
 
-.el4{
+.el4 {
     background-color: rgb(119, 119, 245);
 }
 
-button{
+button {
     background-color: white;
     border: solid 1px rgb(85, 85, 85);
     border-radius: 5px;
     height: 25px;
+}
+
+button.active {
+    background-color: gray;
+    color: white;
 }
